:fireworks: swagger openapi docs
